@@ -24,13 +24,6 @@
  */
 
 static Tcl_PanicProc *panicProc = NULL;
-
-/*
- * The platformPanicProc variable contains a pointer to a platform specific
- * panic procedure, if any. (TclpPanic may be NULL via a macro.)
- */
-
-static Tcl_PanicProc *const platformPanicProc = TclpPanic;
 
 /*
  *----------------------------------------------------------------------
@@ -92,9 +85,6 @@ Tcl_PanicVA(
 
     if (panicProc != NULL) {
 	panicProc(format, arg1, arg2, arg3, arg4, arg5, arg6, arg7, arg8);
-    } else if (platformPanicProc != NULL) {
-	platformPanicProc(format, arg1, arg2, arg3, arg4, arg5, arg6, arg7,
-		arg8);
     } else {
 	fprintf(stderr, format, arg1, arg2, arg3, arg4, arg5, arg6, arg7,
 		arg8);
